feat: add functions createHTMLEl, createHTML

--- a/hangman/index.html
+++ b/hangman/index.html
@@ -78,7 +78,7 @@
           <div class="alphabet__letter">d</div>
           <div class="alphabet__letter">e</div>
           <div class="alphabet__letter">f</div>
-          <div class="alphabet__letter alphabet__letter--disabled">g</div>
+          <div class="alphabet__letter">g</div>
           <div class="alphabet__letter">h</div>
           <div class="alphabet__letter">i</div>
           <div class="alphabet__letter">a</div>
