--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -131,10 +131,27 @@
       </main>
 
       <footer class="footer">
-          <div class="reset button">Reset game</div>
-          <div class="save button">Save game</div>
-          <div class="continue button">Continue last game</div>
+        <div class="reset button">Reset game</div>
+        <div class="save button">Save game</div>
+        <div class="continue button">Continue last game</div>
       </footer>
+    </div>
+
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__header">
+          <h2 class="popup__tittle">Menu</h2>
+          <div class="popup__close">X</div>
+        </div>
+
+        <ul class="popup__menu">
+          <li class="popup__menu-item">Pictures</li>
+          <li class="popup__menu-item">Themes</li>
+          <li class="popup__menu-item">111111111</li>
+          <li class="popup__menu-item">2222222222</li>
+          <li class="popup__menu-item">333333333</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
