--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -12,146 +12,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
 
-  <body class="body medium">
-    <div class="content">
-      <header class="header">
-        <h2 class="button">Level: <span>beginner</span></h2>
-        <h2 class="timer">00:00</h2>
-        <h2 class="button">Menu</h2>
-      </header>
-
-      <main class="main">
-        <div class="numbers-left">
-          <div class="sector">
-            <div class="row">
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number"></div>
-            </div>
-
-            <div class="row">
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number">1</div>
-              <div class="cell cell--number">1</div>
-            </div>
-
-            <div class="row">
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number"></div>
-            </div>
-
-            <div class="row">
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number">1</div>
-              <div class="cell cell--number">1</div>
-            </div>
-
-            <div class="row">
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number"></div>
-              <div class="cell cell--number">5</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="field-container">
-          <div class="numbers-top">
-            <div class="sector">
-              <div class="row">
-                <div class="cell cell--number"></div>
-                <div class="cell cell--number"></div>
-                <div class="cell cell--number"></div>
-                <div class="cell cell--number"></div>
-                <div class="cell cell--number"></div>
-              </div>
-
-              <div class="row">
-                <div class="cell cell--number"></div>
-                <div class="cell cell--number">1</div>
-                <div class="cell cell--number"></div>
-                <div class="cell cell--number">1</div>
-                <div class="cell cell--number"></div>
-              </div>
-
-              <div class="row">
-                <div class="cell cell--number">2</div>
-                <div class="cell cell--number">1</div>
-                <div class="cell cell--number">1</div>
-                <div class="cell cell--number">1</div>
-                <div class="cell cell--number">2</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="field">
-            <div class="square">
-              <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-              </div>
-
-              <div class="row">
-                <div class="cell"></div>
-                <div class="cell cell-shaded"></div>
-                <div class="cell"></div>
-                <div class="cell cell-shaded"></div>
-                <div class="cell"></div>
-              </div>
-
-              <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-              </div>
-
-              <div class="row">
-                <div class="cell cell-shaded"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell cell-shaded"></div>
-              </div>
-
-              <div class="row">
-                <div class="cell cell-shaded"></div>
-                <div class="cell cell-shaded"></div>
-                <div class="cell cell-shaded"></div>
-                <div class="cell cell-shaded"></div>
-                <div class="cell cell-shaded"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
-
-      <footer class="footer">
-        <div class="reset button">Reset game</div>
-        <div class="save button">Save game</div>
-        <div class="continue button">Continue last game</div>
-      </footer>
-    </div>
-
-    <div class="popup">
-      <div class="popup__content">
-        <div class="popup__header">
-          <h2 class="popup__tittle">Menu</h2>
-          <div class="popup__close">X</div>
-        </div>
-
-        <ul class="popup__menu">
-          <li class="popup__menu-item">Pictures</li>
-          <li class="popup__menu-item">Themes</li>
-          <li class="popup__menu-item">111111111</li>
-          <li class="popup__menu-item">2222222222</li>
-          <li class="popup__menu-item">333333333</li>
-        </ul>
-      </div>
-    </div>
+  <body>
+    <script src="./index.js"></script>
   </body>
 </html>
