--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -6,6 +6,7 @@
     <title>nonograms</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css2?family=Macondo&display=swap"
       rel="stylesheet" />
