feat: add footer links

--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -7,6 +7,7 @@
         <title>NewsPortal</title>
     </head>
     <body>
+        <!-- <img class="stars" src="https://img3.akspic.ru/crops/2/6/6/5/3/135662/135662-nochnoenebo-nebo-astronomicheskijobekt-tumannost-zvezda-3840x2160.jpg" alt=""> -->
         <header>
             <h1>News Portal</h1>
         </header>
@@ -15,9 +16,11 @@
             <div class="news"></div>
         </main>
         <footer>
-            <p class="copyright">
-                Copyright <a href="https://newsapi.org">NewsAPI</a>
-            </p>
+            <div class="copyright nelany"><a href="https://github.com/Nelany">Nelany</a>, 2024</div>
+            <a class="rss" href="https://rs.school/js/"
+                ><img class="rss-img" src="https://rs.school/images/rs_school_js.svg" alt="RSSchool"
+            /></a>
+            <p class="copyright">Copyright <a href="https://newsapi.org">NewsAPI</a></p>
         </footer>
 
         <template id="sourceItemTemp">
