--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -11,7 +11,7 @@
             <h1>News Portal</h1>
             <div class="my-news">My news</div>
         </header>
-        <main>
+        <main class="main">
             <div class="sources buttons"></div>
             <div class="news"></div>
         </main>
