--- a/rss-puzzle/src/index.html
+++ b/rss-puzzle/src/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
+    <!-- <link rel="stylesheet" href="global.css" /> -->
   </head>
   <body></body>
 </html>
