--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -44,7 +44,7 @@
         <h2 class="main__page-tittle">Garage (<span class="main__cars-number">6</span>)</h2>
         <h3 class="main__page-number-text">Page #<span class="main__page-number">1</span></h3>
 
-        <div class="main__container">
+        <div class="main__content">
           <div class="main__road-container">
             <div class="main__road-tools buttons-container">
               <button class="button big-button">SELECT</button>
