feat: add button component

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -17,8 +17,8 @@
     <div class="content">
       <header class="header">
         <div class="header__page-button-container header__container">
-          <button class="button big-button">TO GARAGE</button>
-          <button class="button big-button">TO WINNERS</button>
+          <button class="button big-button garage-button">TO GARAGE</button>
+          <button class="button big-button winners-button">TO WINNERS</button>
         </div>
 
         <div class="header__garage-tools-container">
@@ -68,8 +68,8 @@
       </main>
       <footer class="footer">
         <div class="buttons-container">
-          <button class="button small-button">PREV</button>
-          <button class="button small-button">NEXT</button>
+          <button class="button small-button prev-button">PREV</button>
+          <button class="button small-button next-button">NEXT</button>
         </div>
       </footer>
     </div>
