feat: add GarageTools

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -25,17 +25,19 @@
           <form class="header__input-create-form header__container">
             <input class="input input-text" type="text" id="createName" name="createName" />
             <input class="input input-color" type="color" id="createColor" name="createColor" />
-            <button class="button small-button" type="submit">Create</button>
+            <button class="button small-button button-create" type="submit">Create</button>
           </form>
+
           <form class="header__input-update-form header__container">
             <input class="input input-text" type="text" id="updateName" name="updateName" />
             <input class="input input-color" type="color" id="updateColor" name="updateColor" />
-            <button class="button small-button" type="submit">Update</button>
+            <button class="button small-button button-update" type="submit">Update</button>
           </form>
-          <div class="header__tools-buttons-contaner header__container">
-            <button class="button small-button">RACE</button>
-            <button class="button small-button">RESET</button>
-            <button class="button big-button">CREATE CARS</button>
+
+          <div class="header__tools-buttons-container header__container">
+            <button class="button small-button race-button">RACE</button>
+            <button class="button small-button reset-button">RESET</button>
+            <button class="button big-button button-create-cars">CREATE CARS</button>
           </div>
         </div>
       </header>
