feat: add basic main

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -49,20 +49,21 @@
         <div class="main__content">
           <div class="main__road-container">
             <div class="main__road-tools buttons-container">
-              <button class="button big-button">SELECT</button>
-              <button class="button big-button">REMOVE</button>
+              <button class="button big-button select-button">SELECT</button>
+              <button class="button big-button remove-button">REMOVE</button>
               <h4 class="main__car-name">Lamborghini</h4>
             </div>
 
             <div class="main__road">
               <div class="main__pedals-buttons buttons-container">
-                <button class="button button-pedal">GO</button>
-                <button class="button button-pedal">STOP</button>
+                <button class="button button-pedal go-button">GO</button>
+                <button class="button button-pedal stop-button">STOP</button>
               </div>
+
               <div class="main__track">
                 <!-- <img class="car" src="./assets/Lamborghini-Silhouette.svg" alt="car" /> -->
                 <img draggable="true" class="car" src="./assets/lovelamborghini.svg" alt="car" />
-                <img class="flag" src="./assets/flag2.svg" alt="" />
+                <img class="flag" src="./assets/flag2.svg" alt="flag" />
               </div>
             </div>
           </div>
