feat: add winners page

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Async race</title>
-    <link rel="stylesheet" href="./global.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,68 +12,5 @@
     />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
-  <body class="body">
-    <div class="content">
-      <header class="header">
-        <div class="header__page-button-container header__container">
-          <button class="button big-button garage-button">TO GARAGE</button>
-          <button class="button big-button winners-button">TO WINNERS</button>
-        </div>
-
-        <div class="header__garage-tools-container">
-          <form class="header__input-create-form header__container">
-            <input class="input input-text" type="text" id="createName" name="createName" />
-            <input class="input input-color" type="color" id="createColor" name="createColor" />
-            <button class="button small-button button-create" type="submit">Create</button>
-          </form>
-
-          <form class="header__input-update-form header__container">
-            <input class="input input-text" type="text" id="updateName" name="updateName" />
-            <input class="input input-color" type="color" id="updateColor" name="updateColor" />
-            <button class="button small-button button-update" type="submit">Update</button>
-          </form>
-
-          <div class="header__tools-buttons-container header__container">
-            <button class="button small-button race-button">RACE</button>
-            <button class="button small-button reset-button">RESET</button>
-            <button class="button big-button button-create-cars">CREATE CARS</button>
-          </div>
-        </div>
-      </header>
-
-      <main class="main">
-        <h2 class="main__page-tittle">Garage (<span class="main__cars-number">6</span>)</h2>
-        <h3 class="main__page-number-text">Page #<span class="main__page-number">1</span></h3>
-
-        <div class="main__content">
-          <div class="main__road-container">
-            <div class="main__road-tools buttons-container">
-              <button class="button big-button select-button">SELECT</button>
-              <button class="button big-button remove-button">REMOVE</button>
-              <h4 class="main__car-name">Lamborghini</h4>
-            </div>
-
-            <div class="main__road">
-              <div class="main__pedals-buttons buttons-container">
-                <button class="button button-pedal go-button">GO</button>
-                <button class="button button-pedal stop-button">STOP</button>
-              </div>
-
-              <div class="main__track">
-                <!-- <img class="car" src="./assets/Lamborghini-Silhouette.svg" alt="car" /> -->
-                <img draggable="true" class="car" src="./assets/lovelamborghini.svg" alt="car" />
-                <img class="flag" src="./assets/flag2.svg" alt="flag" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
-      <footer class="footer">
-        <div class="buttons-container">
-          <button class="button small-button prev-button">PREV</button>
-          <button class="button small-button next-button">NEXT</button>
-        </div>
-      </footer>
-    </div>
-  </body>
+  <body class="body"></body>
 </html>
